# jarvis

./: .env.example  .gitignore  DESIGN.md  LICENSE  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PLAN.md  README.md  pyproject.toml
evals/: toolcall.py
src/jarvis/: __main__.py  cli.py  config.py
src/jarvis/agent/: llm.py  prompt.py  tool_loop.py  validate.py
src/jarvis/audio/: recorder.py  stt.py  tts.py  wake.py  wakeword.py
src/jarvis/loops/: chat.py  echo.py
src/jarvis/tools/: mcp_client.py  registry.py  web_search.py
