[project]
name = "jarvis"
version = "0.1.0"
description = "Local voice-first personal assistant"
authors = [{ name = "Gavin" }]
requires-python = ">=3.12"
dependencies = [
    "openwakeword>=0.6.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "faster-whisper>=1.0.3",
    "ollama>=0.3.0",
]

[project.scripts]
jarvis = "jarvis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.uv]
# JARVIS is macOS-only. Restrict resolution so we don't fail on Linux-only
# transitive deps like tflite-runtime (openwakeword pulls it on Linux).
environments = ["sys_platform == 'darwin'"]

[tool.ruff]
line-length = 100
target-version = "py312"
